2000-02-10  Akim Demaille  <akim@epita.fr>

	Interrupting autoheader left temp files.
	From Jim Meyering.

	* autoheader.sh (usage): The usage is to use $0 here.
	(ah_base): Be in TMPDIR.
	Install the `trap' before creating the first tmp file.
	Also trap on 0.

2000-02-10  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (AC_OUTPUT_MAKE_DEFS): This is a routine of
	`configure', not `config.status', hence use `conftest' for tmp
	files, not `$ac_cs_root'.
	Removed forgotten developer comment.
	Double quoting the whole body is nicer than just the part that
	needs to be.

2000-02-10  Akim Demaille  <akim@epita.fr>

	* tests/torture.m4: Also check the value of @DEFS@ when no
	CONFIG_HEADER is used.

2000-02-10  Akim Demaille  <akim@epita.fr>

	Changequote-busters!
	From Dan Ackroyd.

	* acgeneral.m4 (AC_INIT_PARSE_ARGS, AC_INIT_PREPARE,
	AC_CACHE_SAVE, AC_PREFIX_PROGRAM, AC_OUTPUT,
	_AC_OUTPUT_CONFIG_STATUS, AC_OUTPUT_MAKE_DEFS, AC_OUTPUT_FILES,
	_AC_OUTPUT_HEADERS, AC_OUTPUT_LINKS, AC_OUTPUT_SUBDIRS): Quit
	playing with changequotes, @BKL@ and Co.!  Just quote properly.

2000-02-10  Akim Demaille  <akim@epita.fr>

	Honor properly the `#define' config.h.in templates.
	Test it.

	* acgeneral.m4 (AC_OUTPUT_HEADERS): Renamed as...
	(_AC_OUTPUT_HEADERS): this.  All callers changed.
	Don't mess with changequote, just quote properly.
	Bug 1.  Because of the `#' in `ac_dA', the quotes <<>> were not
	removed, and therefore the sed script contained `<<define>>'
	instead of `define'.  Now that the block is properly quoted, there
	is no need to quote `define'.
	Bug 2.  Once a `#define' substitution performed, we were branching
	to the top of the sed script (`t top').  This resulted in an
	endless substitution of `#define foo 1' to `#define foo 1'.
	Branching is not enough: you also have to fetch the next input
	line, i.e., use `t' instead of `t t' in ac_dD, and don't output
	`: top' in `config.defines'.
	Though it was correct for `#undef' templates, just apply the same